# fry

./: .gitignore  README.md  ROADMAP.md  dune-project
examples/advanced_rhythm_001/: main.ml
examples/advanced_rhythm_with_notty-output_001/: dune  main.ml
examples/beat/: main.ml
examples/beat_modulated/: dune  main.ml
examples/envelope_compositions/: dune  main.ml
examples/polyrhythmic_euclidians_merged/: dune  main.ml
examples/ratchet/: dune  main.ml
examples/ratchet_001/: main.ml
examples/ratchet_002/: main.ml
examples/rhythm_custom_advanced/: dune  main.ml
examples/rhythm_delayed_notes/: dune  main.ml
examples/rhythm_euclidian/: main.ml
examples/rhythm_probabilistic_notes/: main.ml
examples/rhythm_shuffled/: main.ml
lib/: beat.ml  dune  envelope.ml  event.ml  fry.ml  ratchet.ml  rhythm.ml  signal.ml  time.ml  tuple.ml
lib_core/: dune  eq.ml  rhythm.ml  time.ml  tuple.ml  wavelet.ml
lib_frp/: beat.ml  dune  envelope.ml  event.ml  signal.ml
lib_io/: dune  fry_io.ml  term.ml
