(lang dune 2.9)
;;< goto switch?
(generate_opam_files true)

(name fry)
; (source (github rand00)) 
(license GPLv3)
(authors "rand")
(maintainers "rand@r7p5.earth")

(package
 (name fry)
 (synopsis "Functional reactive rhythm library")
 ;;> goto check if works with newline
 (description "Use FRP to construct rhythmic machinery for controlling e.g. synthesizers")
)

